--- a/style.css
+++ b/style.css
@@ -48,17 +48,32 @@ label {
 }
 
 .password-display {
-  background-color: white
+  background-color: white;
   color: black;
   padding: 1rem;
   border: 1px solid black;
   height: 2rem;
-  width: 350px;
+  width; 300px;
   display: flex;
   justify-content: center;
   align-items: center;
   word-break: break-all;
   border-radius: .5rem;
+}
+
+.btn {
+  grid-column: span;
+  background-color: red;
+  border: 2px solid black;
+  color: white;
+  padding: .5rem 1rem;
+  font-weight: bold;
+  cursor: pointer;
+  border-radius: 1rem;
+}
+
+.btn:hover {
+  background-color: #ff000033
 }
 
 
